--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <div class="but">
             <button class="click"> <a href="">Đồng ý</a>
                 <div class="img">
-                    <a>iu Lan nhiềuuuuu</a>
-
+                    <a>iu Lan Như nhiềuuuuu</a>
                     <img src="./z3628429690886_d7008c709839221716a2225032a473f3.jpg" alt="">
                 </div>
             </button>
